k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-variables-ms
  namespace: utils
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - host: n8n-variables.ikusi
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n-variables-ms
                port:
                  number: 8000
